Fix CMake compile error and add correct null check https://bugs.webkit.org/show_bug.cgi?id=150520

Patch by Alex Christensen <achristensen@webkit.org> on 2015-10-23
Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _doAfterNextPresentationUpdate:]):

Canonical link: https://commits.webkit.org/168675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191528 268f45cc-cd09-0410-ab3c-d52691b4dbfc